@@ -16,7 +16,9 @@ NEWS
   * fixed invalid "304 Not Modified" on broken timestamps
   * fixed endless loop on shrinked files with sendfile() on BSD (#1289)
   * fixed counter overrun in ?auto in mod_status (#909)
+  * fixed too aggresive caching of nested conditionals 
   * removed config-check if passwd files exist (#1188)
+  
 
 - 1.4.16 - 
 
